Fix: Premium translation, 3+ years, Litsenziyaga Yordam

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -386,7 +386,7 @@
                 data-lang-key="hero_desc"
               >
                 Professional konsalting xizmatlari: buxgalteriya, IT, marketing,
-                HR va ko'plab boshqa xizmatlar. 10+ yillik tajriba va 500+
+                HR va ko'plab boshqa xizmatlar. 3+ yillik tajriba va 500+
                 mamnun mijozlar bilan ishonchli hamkoringiz.
               </p>
 
@@ -417,7 +417,7 @@
                 data-aos-delay="400"
               >
                 <div class="hero-feature p-4 text-center">
-                  <div class="text-3xl font-black text-red-600 mb-1">10+</div>
+                  <div class="text-3xl font-black text-red-600 mb-1">3+</div>
                   <div
                     class="text-xs text-gray-600 uppercase leading-tight font-medium"
                     data-lang-key="hero_stat_experience"
@@ -804,7 +804,7 @@
                 class="text-2xl lg:text-3xl font-bold mb-3 uppercase"
                 data-lang-key="service_5_title"
               >
-                Litsenziya Yordam
+                Litsenziyaga Yordam
               </h3>
               <p
                 class="text-gray-500 text-sm leading-relaxed mb-6"
@@ -817,7 +817,7 @@
                 onclick="
                   openServiceModal(
                     '05',
-                    'Litsenziya Yordam',
+                    'Litsenziyaga Yordam',
                     'Biznesni ro\'yxatga olish, ruxsatnoma va litsenziya olishda amaliy yordam berish. Huquqiy maslahat, hujjatlarni tayyorlash va davlat organlari bilan ishlash bo\'yicha to\'liq qo\'llab-quvvatlash.',
                     'https://images.unsplash.com/photo-1589829545856-d10d557cf95f?auto=format&fit=crop&q=80&w=800',
                   )
@@ -895,6 +895,7 @@
                 <i class="fas fa-star text-white text-[10px] sm:text-xs"></i>
                 <span
                   class="text-white text-xs sm:text-sm font-bold uppercase tracking-widest"
+                  data-lang-key="marketing_premium"
                   >Premium Xizmat</span
                 >
               </div>
@@ -1036,7 +1037,7 @@
               <div
                 class="text-2xl sm:text-3xl lg:text-5xl font-black text-red-600 mb-1 sm:mb-2"
               >
-                10+
+                3+
               </div>
               <div
                 class="uppercase tracking-wider font-bold text-[10px] sm:text-sm lg:text-base text-gray-900 mb-0.5 sm:mb-1 leading-tight"
@@ -1157,7 +1158,7 @@
               data-aos="fade-up"
               data-lang-key="about_desc"
             >
-              10+ yil tajriba, 500+ mamnun kompaniya. Biz strategik hamkorlik va
+              3+ yil tajriba, 500+ mamnun kompaniya. Biz strategik hamkorlik va
               uzoq muddatli rivojlanishga yo'naltiramiz.
             </p>
           </div>
@@ -1604,12 +1605,12 @@
               class="text-gray-400 mb-6 leading-relaxed text-sm"
               data-lang-key="footer_desc"
             >
-              O'zbekistonning yetakchi konsalting kompaniyasi. 10+ yillik
+              O'zbekistonning yetakchi konsalting kompaniyasi. 3+ yillik
               tajriba bilan biznesingizni rivojlantiramiz.
             </p>
             <div class="flex gap-2 footer-socials">
               <a
-                href="https://t.me/yourusername"
+                href="https://t.me/Magzuna_consult_N1"
                 aria-label="Telegram"
                 class="w-10 h-10 bg-gray-800/80 backdrop-blur rounded-xl flex items-center justify-center hover:bg-gradient-to-br hover:from-red-600 hover:to-red-700 transition-all duration-300 hover:scale-110 hover:shadow-lg hover:shadow-red-600/20"
               >
@@ -1782,7 +1783,7 @@
                 <div>
                   <span class="text-gray-500 text-xs block mb-0.5">Manzil</span>
                   <span class="text-gray-300" data-lang-key="footer_address"
-                    >Toshkent, Chilonzor tumani</span
+                    >Toshkent, Sergeli tumani</span
                   >
                 </div>
               </li>
@@ -1801,7 +1802,7 @@
                   <a
                     href="tel:+998901234567"
                     class="text-gray-300 hover:text-white transition"
-                    >+998 90 123 45 67</a
+                    >+998 99 774 2722</a
                   >
                 </div>
               </li>
@@ -2154,7 +2155,7 @@
                     type="tel"
                     id="orderPhoneNumberDesktop"
                     required
-                    placeholder="+998 90 123 45 67"
+                    placeholder="+998 99 774 2722"
                     class="w-full px-4 py-3 border-2 border-gray-200 rounded-xl focus:border-red-500 focus:outline-none text-base bg-white transition-colors"
                   />
                 </div>
@@ -2435,7 +2436,7 @@
                     type="tel"
                     id="orderPhoneNumberMobile"
                     required
-                    placeholder="+998 90 123 45 67"
+                    placeholder="+998 99 774 2722"
                     class="w-full px-3 py-2.5 border-2 border-gray-200 rounded-xl focus:border-red-500 focus:outline-none text-sm bg-gray-50 focus:bg-white transition-all"
                   />
                 </div>
