--- a/frontend/index.html
+++ b/frontend/index.html
@@ -143,7 +143,8 @@
             </button>
             <div
               id="langDropdownMenu"
-              class="absolute top-full right-0 mt-2 bg-white rounded-lg shadow-xl border border-gray-100 py-1 min-w-[120px] opacity-0 invisible transform translate-y-2 transition-all duration-200 z-50"
+              class="fixed mt-2 bg-white rounded-lg shadow-xl border border-gray-100 py-1 min-w-[140px] opacity-0 invisible transform translate-y-2 transition-all duration-200 z-[9999]"
+              style="top: auto; right: auto;"
             >
               <button
                 onclick="
@@ -209,49 +210,61 @@
           </button>
         </div>
 
-        <!-- Mobile Language Selector - Horizontal Flags -->
-        <div class="lg:hidden flex items-center gap-0.5 mr-2">
+        <!-- Mobile Language Selector - Globe Icon with Dropdown -->
+        <div class="lg:hidden relative" id="mobileLangSwitcher">
           <button
-            onclick="setLanguage('uz')"
-            class="mobile-lang-flag w-9 h-9 flex items-center justify-center rounded-lg transition-all hover:bg-white/20"
-            data-lang="uz"
+            id="mobileLangBtn"
+            class="w-10 h-10 flex items-center justify-center rounded-lg bg-white/10 hover:bg-white/20 transition-all border border-white/20"
           >
-            <img
-              src="https://flagcdn.com/w40/uz.png"
-              srcset="https://flagcdn.com/w80/uz.png 2x"
-              alt="UZ"
-              class="w-6 h-4 rounded-sm shadow-lg border border-white/30"
-            />
+            <i class="fas fa-globe text-white text-lg"></i>
           </button>
-          <button
-            onclick="setLanguage('ru')"
-            class="mobile-lang-flag w-9 h-9 flex items-center justify-center rounded-lg transition-all hover:bg-white/20"
-            data-lang="ru"
+          <div
+            id="mobileLangDropdown"
+            class="fixed mt-2 bg-white rounded-xl shadow-2xl border border-gray-100 py-2 min-w-[130px] opacity-0 invisible transform translate-y-2 transition-all duration-200 z-[9999]"
+            style="top: auto; right: auto;"
           >
-            <img
-              src="https://flagcdn.com/w40/ru.png"
-              srcset="https://flagcdn.com/w80/ru.png 2x"
-              alt="RU"
-              class="w-6 h-4 rounded-sm shadow-lg border border-white/30"
-            />
-          </button>
-          <button
-            onclick="setLanguage('en')"
-            class="mobile-lang-flag w-9 h-9 flex items-center justify-center rounded-lg transition-all hover:bg-white/20"
-            data-lang="en"
-          >
-            <img
-              src="https://flagcdn.com/w40/gb.png"
-              srcset="https://flagcdn.com/w80/gb.png 2x"
-              alt="EN"
-              class="w-6 h-4 rounded-sm shadow-lg border border-white/30"
-            />
-          </button>
+            <button
+              onclick="setLanguage('uz'); closeMobileLangDropdown();"
+              class="mobile-lang-option flex items-center gap-3 w-full px-4 py-2.5 hover:bg-red-50 transition-colors"
+              data-lang="uz"
+            >
+              <img
+                src="https://flagcdn.com/w40/uz.png"
+                alt="UZ"
+                class="w-6 h-4 rounded-sm shadow-sm"
+              />
+              <span class="text-gray-700 text-sm font-semibold">UZ</span>
+            </button>
+            <button
+              onclick="setLanguage('ru'); closeMobileLangDropdown();"
+              class="mobile-lang-option flex items-center gap-3 w-full px-4 py-2.5 hover:bg-red-50 transition-colors"
+              data-lang="ru"
+            >
+              <img
+                src="https://flagcdn.com/w40/ru.png"
+                alt="RU"
+                class="w-6 h-4 rounded-sm shadow-sm"
+              />
+              <span class="text-gray-700 text-sm font-semibold">RU</span>
+            </button>
+            <button
+              onclick="setLanguage('en'); closeMobileLangDropdown();"
+              class="mobile-lang-option flex items-center gap-3 w-full px-4 py-2.5 hover:bg-red-50 transition-colors"
+              data-lang="en"
+            >
+              <img
+                src="https://flagcdn.com/w40/gb.png"
+                alt="EN"
+                class="w-6 h-4 rounded-sm shadow-sm"
+              />
+              <span class="text-gray-700 text-sm font-semibold">EN</span>
+            </button>
+          </div>
         </div>
 
         <button
           id="mobileMenuBtn"
-          class="lg:hidden h-10 w-10 flex flex-col justify-center items-center space-y-1.5 group cursor-pointer rounded-lg hover:bg-white/10 transition-colors"
+          class="lg:hidden h-10 w-10 flex flex-col justify-center items-center space-y-1.5 group cursor-pointer rounded-lg hover:bg-white/10 transition-colors ml-2"
           aria-label="Menyu ochish"
           aria-expanded="false"
         >
