--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1534,7 +1534,7 @@
 
             <!-- Facebook -->
             <a
-              href="https://www.facebook.com/share/1CFcvMqgSX/"
+              href="https://www.facebook.com/share/1MxgRiYPH6/"
               target="_blank"
               class="group text-center bg-white hover:bg-red-50 p-4 sm:p-6 lg:p-8 rounded-xl sm:rounded-2xl transition-all duration-300 shadow-lg hover:shadow-xl border border-gray-100 hover:-translate-y-1 flex flex-col items-center justify-center"
               data-aos="fade-up"
@@ -1721,7 +1721,7 @@
                 <i class="fab fa-instagram text-sm"></i>
               </a>
               <a
-                href="https://www.facebook.com/share/1CFcvMqgSX/"
+                href="https://www.facebook.com/share/1MxgRiYPH6/"
                 aria-label="Facebook"
                 class="w-10 h-10 bg-gray-800/80 backdrop-blur rounded-xl flex items-center justify-center hover:bg-gradient-to-br hover:from-red-600 hover:to-red-700 transition-all duration-300 hover:scale-110 hover:shadow-lg hover:shadow-red-600/20"
               >
